--- a/package.json
+++ b/package.json
@@ -4,8 +4,9 @@
   "description": "BB-8 Sphero second test",
   "main": "app.js",
   "dependencies": {
-    "cylon-ble": "^0.10.1",
     "cylon": "^1.3.0",
+    "cylon-ble": "^0.10.1",
+    "cylon-sphero-ble": "^0.11.0",
     "usb": "^1.2.0"
   },
   "devDependencies": {},
